--- a/MAUICalculator/MAUICalculator.csproj
+++ b/MAUICalculator/MAUICalculator.csproj
@@ -53,7 +53,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="MVVM\" />
+	  <MauiXaml Update="MVVM\CalcView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
